--- a/package.json
+++ b/package.json
@@ -4,21 +4,43 @@
 	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"build": "vue-tsc --noEmit && vite build",
+		"watch": "vue-tsc --noEmit && vite build --watch"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
+	"dependencies": {
+		"@babel/types": "^7.20.2",
+		"@codemirror/autocomplete": "^6.3.2",
+		"@codemirror/collab": "^6.0.0",
+		"@codemirror/commands": "^6.1.2",
+		"@codemirror/language": "^6.3.1",
+		"@codemirror/lint": "^6.1.0",
+		"@codemirror/search": "^6.2.3",
+		"@codemirror/state": "^6.1.4",
+		"@codemirror/view": "^6.5.1",
+		"@lezer/common": "^1.0.1",
+		"@lezer/highlight": "^1.1.2",
+		"@lezer/lr": "^1.2.5",
+		"electron": "^21.3.0",
+		"vue": "^3.2.33"
+	},
 	"devDependencies": {
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
+		"@vitejs/plugin-vue": "^3.0.3",
+		"autoprefixer": "^10.4.8",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.14.47",
-		"obsidian": "latest",
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "4.7.4",
+		"vite": "^3.0.9",
+		"vite-plugin-html": "^3.2.0",
+		"vitest": "^0.23.2",
+		"vue-tsc": "^1.0.9",
+		"obsidian": "^0.16.3"
 	}
 }
