--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
+	"skipLibCheck": true,
 	"strictNullChecks": true,
+    "allowSyntheticDefaultImports": true,
     "lib": [
       "DOM",
       "ES5",
@@ -19,6 +21,8 @@
     ]
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+  	"**/*.vue",
+    "*.ts"
   ]
 }
