--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     ]
   },
   "include": [
-    "**/*.ts",
-  	"**/*.vue",
-    "*.ts"
+    "src/**/*.ts",
+  	"src/**/*.vue",
+  	"src/*.d.ts",
   ]
 }
