--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@lezer/lr": "^1.2.5",
 		"@types/luxon": "^3.1.0",
 		"@types/voca": "^1.4.2",
+		"@vueuse/core": "^10.4.1",
 		"electron": "^21.3.0",
 		"luxon": "^3.1.0",
 		"pinia": "^2.0.24",
@@ -43,7 +44,7 @@
 		"postcss": "^8.4.16",
 		"tailwindcss": "^3.1.8",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4",
+		"typescript": "5.2.2",
 		"vite": "^3.0.9",
 		"vite-plugin-html": "^3.2.0",
 		"vitest": "^0.23.2",
